Closed
Bug 987625
Opened 11 years ago
Closed 11 years ago
image/decoders/nsPNGDecoder.cpp:327:20: error: use of undeclared identifier 'MOZ_PNG_MAX_DIMENSION' (--with-system-png)
Categories
(Core :: Graphics: ImageLib, defect)
Core
Graphics: ImageLib
Tracking
()
RESOLVED
FIXED
mozilla31
People
(Reporter: jbeich, Assigned: glennrp+bmo)
References
Details
Attachments
(1 file)
1.90 KB,
patch
|
jrmuizel
:
review+
jbeich
:
feedback+
|
Details | Diff | Splinter Review |
image/decoders/nsPNGDecoder.cpp:327:20: error:
use of undeclared identifier 'MOZ_PNG_MAX_DIMENSION'
if ((width > MOZ_PNG_MAX_DIMENSION) || (height > MOZ_PNG_MAX_DIMENSION)) {
^
image/decoders/nsPNGDecoder.cpp:327:56: error:
use of undeclared identifier 'MOZ_PNG_MAX_DIMENSION'
if ((width > MOZ_PNG_MAX_DIMENSION) || (height > MOZ_PNG_MAX_DIMENSION)) {
^
image/decoders/nsPNGDecoder.cpp:509:15: error:
use of undeclared identifier 'MOZ_PNG_MAX_DIMENSION'
if (width > MOZ_PNG_MAX_DIMENSION || height > MOZ_PNG_MAX_DIMENSION)
^
image/decoders/nsPNGDecoder.cpp:509:49: error:
use of undeclared identifier 'MOZ_PNG_MAX_DIMENSION'
if (width > MOZ_PNG_MAX_DIMENSION || height > MOZ_PNG_MAX_DIMENSION)
^
4 errors generated.
gmake[1]: *** [nsPNGDecoder.o] Error 1
Comment 1•11 years ago
|
||
Dammit, guess I should have removed it from mozpngconf.h instead.
Assignee | ||
Comment 2•11 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM UTC-4] from comment #1)
> Dammit, guess I should have removed it from mozpngconf.h instead.
Correct, it should have been changed to 32767 in nsPNGDecoder.cpp and
removed from mozpngconf.h (or probably better, protected with #ifndef
in either or both places).
Assignee | ||
Updated•11 years ago
|
Assignee: nobody → glennrp+bmo
Status: NEW → ASSIGNED
OS: FreeBSD → All
Hardware: x86_64 → All
Assignee | ||
Comment 3•11 years ago
|
||
I think this happens only on builds using the system library instead of the in-tree library.
Comment 4•11 years ago
|
||
Correct. nsPNGDecoder.cpp includes png.h which includes mozpngconf.h.
Assignee | ||
Comment 5•11 years ago
|
||
Comment on attachment 8396359 [details] [diff] [review]
v00 conditionally define MOZ_PNG_MAX_DIMENSION
My build --with-system-png succeeded with the patch. I'm actually using 1.5.18 (with MOZPNG hack) as 1.6.x breaks too many FreeBSD ports.
Attachment #8396359 -
Flags: feedback+
Assignee | ||
Comment 7•11 years ago
|
||
Based on the feedback and my own test with the in-tree libpng, I would suspect that this does not need a try-server test.
Let's do one anyhow. I have not been able to test with the system library because of some unrelated problem with freetype on my home machine.
Flags: needinfo?(ryanvm)
Comment 8•11 years ago
|
||
Sorry for the wait.
https://tbpl.mozilla.org/?tree=Try&rev=21fee4746826
Flags: needinfo?(ryanvm)
Assignee | ||
Comment 9•11 years ago
|
||
Comment on attachment 8396359 [details] [diff] [review]
v00 conditionally define MOZ_PNG_MAX_DIMENSION
Try server was 100% green. r?
Attachment #8396359 -
Flags: review?(jmuizelaar)
Updated•11 years ago
|
Attachment #8396359 -
Flags: review?(jmuizelaar) → review+
Assignee | ||
Updated•11 years ago
|
Keywords: checkin-needed
Comment 10•11 years ago
|
||
Keywords: checkin-needed
Comment 11•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
Comment 12•11 years ago
|
||
The following changeset is now in Firefox Nightly:
> 2af9c4e02952 Bug 987625 - Conditionally define MOZ_PNG_MAX_DIMENSION. r=jrmuizel
Nightly Build Information:
ID: 20140402030201
Changeset: 4941a2ac0786109b08856738019b016a6c5a66a6
Version: 31.0a1
TBPL: https://tbpl.mozilla.org/?rev=4941a2ac0786
URL: https://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2014/04/2014-04-02-03-02-01-mozilla-central
Download Links:
> Linux x86: https://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2014/04/2014-04-02-03-02-01-mozilla-central/firefox-31.0a1.en-US.linux-i686.tar.bz2
> Linux x86_64: https://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2014/04/2014-04-02-03-02-01-mozilla-central/firefox-31.0a1.en-US.linux-x86_64.tar.bz2
> Linux x86_64 ASAN: https://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2014/04/2014-04-02-03-02-01-mozilla-central/firefox-31.0a1.en-US.linux-x86_64-asan.tar.bz2
> Mac: https://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2014/04/2014-04-02-03-02-01-mozilla-central/firefox-31.0a1.en-US.mac.dmg
> Win32: https://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2014/04/2014-04-02-03-02-01-mozilla-central/firefox-31.0a1.en-US.win32.installer.exe
> Win64: https://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2014/04/2014-04-02-03-02-01-mozilla-central/firefox-31.0a1.en-US.win64-x86_64.installer.exe
Previous Nightly Build Information:
ID: 20140401030203
Changeset: 1417d180a1d8665b1a91b897d1cc4cc31e7980d4
Version: 31.0a1
TBPL: https://tbpl.mozilla.org/?rev=1417d180a1d8
URL: https://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2014/04/2014-04-01-03-02-03-mozilla-central
You need to log in
before you can comment on or make changes to this bug.
Description
•