Bug 987625 - Conditionally define MOZ_PNG_MAX_DIMENSION. r=jrmuizel