image/decoders/nsPNGDecoder.cpp
@@ -46,6 +46,11 @@ GetPNGDecoderAccountingLog()
 }
 #endif
 
+/* limit image dimensions (bug #251381, #591822, and #967656) */
+#ifndef MOZ_PNG_MAX_DIMENSION
+#  define MOZ_PNG_MAX_DIMENSION 32767
+#endif
+
 // For size decodes
 #define WIDTH_OFFSET 16
 #define HEIGHT_OFFSET (WIDTH_OFFSET + 4)
